fix(styles): make grid items stretch until 2500px screen size and add padding for white border look as per the design

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -49,12 +49,8 @@ table {
   border-spacing: 0;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 .container {
-  width: 1903px;
+  max-width: 2600px;
   margin: 0 auto;
 }
 .container .content {
@@ -571,13 +567,14 @@ header button {
 @media (min-width: 1000px) {
   .projects-grid-container {
     display: grid;
-    grid-template-columns: 50vw 50vw;
-    gap: 8px;
+    grid-template-columns: 50% 50%;
+    gap: 16px;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
-@media (min-width: 1900px) {
+@media (min-width: 2500px) {
   .projects-grid-container {
-    grid-template-columns: 940px 940px;
-    grid-template-rows: 800px 800px;
+    grid-template-columns: 1200px 1200px;
   }
 }
